# SkillInquisitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
benchmark/: manifest.yaml
docs/: agent-skill-attack-vectors.md  architecture.md  benchmark-optimization-log-2026-03-16.md  business-requirements.md
docs/requirements/: architecture.md  business-requirements.md
docs/research/: 2026-03-18-malicious-skill-detection-hypotheses.md  2026-03-18-real-world-hypothesis-test-round-2.md  2026-03-18-real-world-optimization-log.md  2026-03-19-real-malicious-skills-sources.md  agent-skills-comparison.md  epic-12-benchmark-dataset-research.md  promptforest-architecture.md  skillsentry-architecture.md
docs/testing/: regression-harness.md
scripts/: copy_fixtures_to_benchmark.py  fetch_benchmark_skills.py  fetch_malicious_bench.py  fetch_openclaw_malicious_skills.py  reset_benchmark_to_safe_repos.py  run-test-suite.sh
src/skillinquisitor/: __main__.py  adjudication.py  cli.py  config.py  input.py  models.py  normalize.py  pipeline.py  policies.py  progress.py  runtime.py  scoring.py
tests/: conftest.py  test_adjudication.py  test_benchmark_dataset.py  test_benchmark_metrics.py  test_benchmark_report.py  test_benchmark_runner.py  test_cli.py  test_config.py  test_deterministic.py  test_fetch_openclaw_malicious_skills.py  test_formatters.py  test_input.py  test_llm.py  test_ml.py  test_normalize.py  test_pipeline.py  test_sarif.py  test_scoring.py  test_soft_consensus.py  test_soft_findings.py
tests/fixtures/: manifest.yaml
(+1155 files in other folders)
